--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR UW26 37155025, 83089982, 16318275, 58445362
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
